Fixed spacing

--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@
     --bg-primary: linear-gradient(to bottom, #b3ecff, #4da6ff, #003d66) ;
 
     /* Cards and forms backgroud */
-    --bg-secondary: #ffffff;
+    --bg-secondary: #e8faff;
 
     /*Main text color*/
     --text-primary:  #1a202c;
@@ -34,7 +34,7 @@ body.dark {
     --bg-primary: linear-gradient(to bottom, #003d66, #002b4d, #001a33) ;
 
     /* Cards and forms backgroud */
-    --bg-secondary:  #2d3748;
+    --bg-secondary:  #14273f;
 
     /*Main text color*/
     --text-primary:  #f7fafc;
@@ -72,6 +72,12 @@ label{
     text-align: left;
 
     margin-top: 10px;
+
+}
+
+h1{
+
+    text-align: center;
 
 }
 
